# stag

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  local_paths.template.json  pyproject.toml
.github/workflows/: docs.yml  tests.yml
data/: README.md  correlation_results.txt
data/deer_codes/: Deer_Codes_fromDB.csv  Deer_codes.csv  Deer_codes_cutdown.csv  Deer_codes_problem.csv  Deer_codes_without_first_2.csv
docs/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  pipeline.rst  usage.rst
notebooks/data_merging/: R3D1_Complete_Data_Merging.ipynb  R4D1_Complete_Data_Merging.ipynb  R4D2_Complete_Data_Merging.ipynb  R4D3_Complete_Data_Merging.ipynb
notebooks/exploratory/: REP3_exploration_notebook.ipynb  REP4_exploration_notebook.ipynb  exploratory_notebook.ipynb  exploratory_notebook_rep3.ipynb  exploratory_notebook_rep4_deer2.ipynb  tortuosity_notebook.ipynb  tortuosity_notebook_2.ipynb
scripts/: analyse_groundtruthing_register.py  build_null_surrogate.py  cache_label_timeline.py  check_synced_data.py  generate_deer_codes.py  merge_silhouette_extension.py  merge_stability_null.py  plot_4panel_composite.py  plot_ch_panel_with_null.py  plot_instability_panel_with_null.py  plot_pm_bout_durations.py  plot_pm_bout_durations_mean_sem.py  plot_silhouette_inertia_vertical.py  plot_stability_null_band.py  preprocess_clustering_data.py  replot_ear_flick_day_night.py  replot_internal_metrics.py  replot_internal_metrics_4reductions.py  run_internal_metrics.py  run_sequence_stats.py  run_stability_null_block.py  run_sync.py  run_sync_aoraki.py  run_tortuosity.py  silhouette_elbow_4reductions.py  sync_db_labels.py  test_new_machine.py
slurm/: build_stability_null_surrogates.sh  env.sh  env.template.sh  get_tortuosity_aoraki.sh  make_deer_db.sh  run_SLURM_mu_sigma.sh  run_check_on_aoraki.sh  run_clust_table.sh  run_gps_analysis_aoraki.sh  run_single_aoraki_job.sh  run_slurm_centroid_update_trajData.sh  run_slurm_clustering.sh  run_slurm_fill_k45.sh  run_slurm_main_clustering.sh  run_slurm_main_clustering_H100.sh  run_slurm_main_clustering_L40.sh  run_sync_for_aoraki.sh  run_sync_for_aoraki_alex.sh  run_vid_availabilty_deerwise_aoraki.sh  silhouette_extension_array.sh  stability_null_array.sh  stability_null_single.sh  submit_silhouette_extension.sh  submit_stability_null.sh
stag/: __init__.py  constants.py  local_paths.py
stag/analysis/: __init__.py  circadian.py  label_analysis.py  markov.py  nan_handler.py  null_models.py  preprocessing.py  stability_null.py  super_prototypes.py
stag/clustering/: __init__.py  internal_metrics.py  kmeans.py  meta_analysis.py  plotting.py
stag/database/: __init__.py  deer_info.py  handler.py  make_cluster_data.py  orm.py
stag/embedded/: __init__.py  export_centroids.py  nearest_centroid.c  nearest_centroid.h
stag/embedded/benchmark/arm/: Makefile  benchmark_arm.c  renode_runner.py  startup_cortex_m.c
stag/embedded/benchmark/arm/imxrt1064/: linker.ld  run.resc
stag/embedded/benchmark/arm/nrf52840/: linker.ld  run.resc
stag/embedded/benchmark/arm/rp2040/: linker.ld  rp2040.repl  run.resc
stag/embedded/benchmark/arm/samd21/: linker.ld  run.resc  samd21.repl
stag/embedded/benchmark/arm/stm32f4_disco/: linker.ld  run.resc
stag/embedded/benchmark/avr/: Makefile  benchmark_avr.c  gen_inputs.py  simavr_runner.py
stag/embedded/benchmark/msp430/: Makefile  benchmark_msp430.c  mspsim_runner.py
stag/embedded/benchmark/xtensa/: qemu_xtensa_runner.py
stag/embedded/benchmark/xtensa/esp32/: Makefile  benchmark_esp32.c  linker.ld  startup_esp32.S
stag/gps/: __init__.py  analysis.py  plotting.py  tortuosity.py
stag/sync/: __init__.py  data_sync.py  utils.py
stag/utils/: __init__.py  banners.py  csv_formatter.py  filename_generator.py
tests/: test_core.py  test_embedded_export.py  test_internal_metrics.py  test_nearest_centroid_c.py  test_no_hmm_terminology.py  test_sequence_stats.py
